# FullStackTestFlaskReactMongo

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  main.py  pyproject.toml
backend/config/: config.py
backend/endpoints/: news.py  users.py
backend/models/: news.py  user.py
backend/routes/: routes.py
backend/tests/unit/: test_model_news.py
config/: db.py
endpoints/: news.py
frontend/: package-lock.json  package.json
frontend/public/: index.css  index.html
frontend/src/: App.css  App.js  test.js
frontend/src/pages/Create/: Create.js
frontend/src/pages/Home/: Home.js
frontend/src/pages/Update/: Update.js
models/: news.py
routes/: routes.py
